# trade-lab

./: .env.example  .gitignore  CLAUDE.md  README.md  RESULTS.md  compass_artifact_wf-ee29bed8-d8df-4752-b300-60fbd2d40660_text_markdown.md  deep-research-report.md  ecosystem.config.js  mkdocs.yml  paper.env.example  pyproject.toml
.github/workflows/: ci.yml
docs/: article_validation_methodology_draft.md  backtest_validation.md  index.md
docs/results/: dsr_in_walk_forward.md  multi_asset.md  pit_universe.md  strategy_comparison.md  vol_targeting.md  walk_forward_btc.md  walk_forward_priority5.md  yearly_btc.md
docs/strategies/: cross_sectional_momentum.md  donchian_trend.md  pma_ratio.md  regime_only.md  regime_sma_cross.md  rsi.md  sma_cross.md  tsmom.md
findings/: breadth_filter.md  buy_and_hold_cost_symmetry.md  cluster_stability.md  cross_sectional_reversal.md  ctrend_proxy_price_only.md  ensemble_portfolio.md  han_28d_tsmom.md  hmm_regime_overlay.md  literature_review_v1.md  literature_review_v2.md  literature_review_v3.md  market_basket_tsmom.md  mvrv_overlay.md  production_config_v1.md  strategy_test_session_2026_05_29.md  validation_behavioral_fingerprint.md  validation_execution.md  validation_lookahead_audit.md  validation_multiexchange.md  validation_universe_bias.md  vol_targeting_regime_gate.md
ops/: README.md  ecosystem.health.config.js  health_server.py  metrics.py
ops/netdata/go.d/: httpcheck.conf.example  prometheus.conf.example
ops/netdata/health.d/: trade_lab.conf  trade_lab_clock.conf  trade_lab_metrics.conf
paper_trading/: README.md
paper_trading/fingerprint/: reference_fingerprint.json
scripts/: build_reference_fingerprint.py  generate_og_image.py  mkdocs_hooks.py  validation_lookahead_truncation_audit.py  validation_test1_multiexchange.py  validation_test2_execution.py
src/trade_lab/: __init__.py  cli.py  config.py  logging_setup.py  uikit.py
src/trade_lab/backtest/: __init__.py  cluster_stability.py  compare.py  cross_sectional.py  ctrend_proxy.py  dsr.py  engine.py  ensemble.py  ensemble_sleeves.py  hmm_regime_overlay.py  market_index.py  metrics.py  multi_asset.py  mvrv_overlay.py  plotting.py  reports.py  sweep.py  walk_forward.py  walk_forward_grids.py  walk_forward_v2.py  yearly.py
src/trade_lab/config/: __init__.py  production_config.py  runtime.py
src/trade_lab/dashboard/: __init__.py  app.py
src/trade_lab/data/: __init__.py  coin_registry.py  coingecko.py  coinmetrics.py  fetch_ohlcv.py  storage.py  universe.py
src/trade_lab/execution/: README.md  __init__.py  allocator.py  broker.py  clientorder.py  config.py  db_mirror.py  delta.py  dry_run.py  instance_lock.py  journal.py  live_cycle.py  order_state.py  orders.py  signal.py
src/trade_lab/monitoring/: README.md  __init__.py  app.py  data_source.py  research.py  trade-lab-monitoring.service.example
src/trade_lab/paper_trading/: __init__.py  cli.py  fingerprint.py  fingerprint_cli.py  fingerprint_monitor.py  harness.py  journal.py  lookahead_cli.py  lookahead_detector.py  vintage_store.py
src/trade_lab/risk/: __init__.py  position_sizing.py
src/trade_lab/strategies/: __init__.py  base.py  donchian_trend.py  gated_strategy.py  pma_ratio.py  regime_only.py  regime_sma_cross.py  rsi.py  sma_cross.py  tsmom.py  vol_target_wrapper.py
tests/: test_backtest_engine.py  test_cli_paper_dry_run.py  test_cli_paper_place_orders.py  test_cli_paper_place_test_order.py  test_cli_params.py  test_cluster_stability.py  test_compare.py  test_cross_sectional.py  test_cross_sectional_reversal.py  test_ctrend_proxy.py  test_dashboard_app_helpers.py  test_data_filtering.py  test_db_mirror.py  test_debug_trades.py  test_donchian_trend.py  test_dsr.py  test_ensemble.py  test_execution_allocator.py  test_execution_broker.py  test_execution_clientorder.py  test_execution_config.py  test_execution_delta.py  test_execution_dry_run.py  test_execution_env_isolation.py  test_execution_instance_lock.py  test_execution_journal.py  test_execution_live_cycle.py  test_execution_order_state.py  test_execution_orders.py  test_execution_signal.py  test_fetch_ohlcv_pagination.py  test_gated_strategy.py  test_hmm_regime_overlay.py  test_logging_setup.py  test_market_index.py  test_metrics.py  test_monitoring_app_helpers.py  test_monitoring_data_source.py  test_monitoring_research.py  test_multi_asset.py  (+24 more)
