[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-lab"
version = "0.1.0"
description = "Research framework for backtesting trading strategies."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "trade-lab" }]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "ccxt>=4.0",
    "python-dotenv>=1.0",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]
dashboard = [
    "streamlit>=1.30",
    "plotly>=5.18",
]
monitoring = [
    "streamlit>=1.30",
    "streamlit-autorefresh>=1.0",
    "plotly>=5.18",
]
research = [
    # Cross-sectional ML proxies (CTREND, MVRV, regime switching).
    # Pin minor version: sklearn ElasticNet/Ridge solver defaults drift,
    # and research runs must be reproducible.
    "scikit-learn>=1.5,<1.6",
    # 2-state Gaussian HMM for regime-switching backtests. Pinned —
    # convergence behaviour and init randomization change between
    # minor versions and would invalidate replay.
    "hmmlearn>=0.3,<0.4",
]

[project.scripts]
trade-lab = "trade_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
