[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-lab"
version = "0.1.0"
description = "Research framework for backtesting trading strategies."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "trade-lab" }]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "ccxt>=4.0",
    "python-dotenv>=1.0",
    "pyarrow>=14.0",
    # MySQL mirror of data/journal + data/state (execution/db_mirror.py).
    "pymysql>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    # Linter. Pinned to a minor range so local and CI agree on the rule
    # set — ruff enables/renames rules across minor versions.
    "ruff>=0.15,<0.16",
]
dashboard = [
    "streamlit>=1.30",
    "plotly>=5.18",
]
monitoring = [
    "streamlit>=1.30",
    "streamlit-autorefresh>=1.0",
    "plotly>=5.18",
]
research = [
    # Cross-sectional ML proxies (CTREND, MVRV, regime switching).
    # Pin minor version: sklearn ElasticNet/Ridge solver defaults drift,
    # and research runs must be reproducible.
    "scikit-learn>=1.5,<1.6",
    # 2-state Gaussian HMM for regime-switching backtests. Pinned —
    # convergence behaviour and init randomization change between
    # minor versions and would invalidate replay.
    "hmmlearn>=0.3,<0.4",
]

[project.scripts]
trade-lab = "trade_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
# ops/ holds runnable operational scripts (the Netdata health server) that
# live outside the package but still need unit tests. Put it on the import
# path so tests can `import health_server`.
pythonpath = ["ops"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# Default-ish safe set: pyflakes (F) plus a curated pycodestyle subset
# (E4 imports, E7 statements, E9 syntax). Deliberately NOT enabling E501
# (line length) or I (import sorting) yet — those would be a large,
# separate reformatting change. Ratchet the rule set up later.
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
# Test code uses conventions ruff flags but that are idiomatic in tests:
#   E712 — `== True` / `== False` on numpy/pandas booleans is an explicit,
#          intended comparison (e.g. `(series == False).all()`, or
#          `iloc[-1] == True` where the value is a numpy bool), not a
#          truthiness check that could be simplified away.
#   E741 — short OHLCV-style names (`l` for low) in local unpacking.
#   E731 — `x = lambda: ...` throwaway helpers inside a test.
#   E402 — imports placed after test-scoped setup.
#   F841 — a bound-but-unused local that documents intent in a test.
"tests/**" = ["E712", "E741", "E731", "E402", "F841"]
